2005-12-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_class_init):
	* gst-libs/gst/audio/gstbaseaudiosrc.c:
	(gst_base_audio_src_class_init):
	  update strings, values are in microseconds
	  change the default sink buffer time to something that is smaller
	  (to help software volume mixing have a slightly lower delay) but
	  still be acceptable on Wim's laptop

2005-12-20  Edward Hervey  <edward@fluendo.com>

	* gst-libs/gst/riff/riff-media.c: (gst_riff_create_video_template_caps):
	Made a quack, forgot to add DUCK to the riff video template.

2005-12-19  Edward Hervey  <edward@fluendo.com>

	* ext/ogg/gstogmparse.c: (gst_ogm_text_parse_base_init),
	(gst_ogm_parse_init), (gst_ogm_audio_parse_init),
	(gst_ogm_video_parse_init), (gst_ogm_text_parse_init),
	(gst_ogm_parse_chain):
	Make sure pads are initialized correctly.
	* gst-libs/gst/riff/riff-ids.h:
	* gst-libs/gst/riff/riff-media.c: (gst_riff_create_video_caps),
	(gst_riff_create_video_template_caps):
	Add a whole bunch of FOURCC <=> MimeType.
	Extend the riff video pad template to support the newly added fourcc.

2005-12-18  Jan Schmidt  <thaytan@mad.scientist.com>

	* ext/ogg/gstoggdemux.c: (gst_ogg_demux_deactivate_current_chain),
	(gst_ogg_demux_activate_chain):
	  Extra debug output when activating/deactivating chains.

	* gst/playback/gstdecodebin.c: (gst_decode_bin_factory_filter),
	(is_demuxer_element), (try_to_link_1), (remove_element_chain),
	(unlinked):
	  Remove a queue from our list when it becomes unlinked.
	  Don't add queues to elements in class 'Demux' if they
	  can only produce one pad 

2005-12-18  Julien MOUTTE  <julien@moutte.net>

	* gst-libs/gst/video/gstvideosink.c: (gst_video_sink_base_init),
	(gst_video_sink_get_type): Add a debug category.

2005-12-17  Philippe Khalaf  <burger@speedy.org> 

	* gst-libs/gst/rtp/gstbasertpdepayload.c:
	(gst_base_rtp_depayload_init), (gst_base_rtp_depayload_handle_sink_event):