@@ -1,3 +1,8 @@
+2005-12-21  Edgard Lima <edgard.lima@indt.org.br>
+
+	* gst/typefind/gsttypefindfunctions.c:
+	iLBC30 and iLBC20 added to typefind.
+
 2005-12-20  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* gst-libs/gst/audio/gstbaseaudiosink.c:
